crates/rlf-macros/tests/fail/bare_ident_matches_param.rs
use rlf::rlf;

rlf! {
    greet($name) = "Hello, {name}!";
}

fn main() {}
